Bug 178916 - akonadiserver Doesn't Exit on Logout
Summary: akonadiserver Doesn't Exit on Logout
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: server (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-27 20:24 UTC by Garry Williams
Modified: 2008-12-29 21:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Garry Williams 2008-12-27 20:24:37 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

After logging out of KDE desktop, the akonadiserver process remains.  This results in multiple "leaked" copies of akonadiserver, mysqld, and akonadi_control running in subsequent sessions.

I am running the current KDE 4.2 beta installed from the kde-testing fedora repository.

My work-around was to add

#!/bin/sh
akonadictl stop

to ~/.kde/shutdown/
.
Comment 1 Volker Krause 2008-12-29 21:05:40 UTC
SVN commit 903051 by vkrause:

- shut down when we lost the connection to the D-Bus session bus (which
  likely means the session was closed, but as a non-gui application we
  have no way of knowing that).
- add some basic handling of command line args, at least 'akonadiserver
  --help' does no longer accidentally start a partial Akonadi server.
- add a --version command line option which will be useful for the
  self-tests

BUG: 178916


 M  +1 -1      CMakeLists.txt  
 M  +6 -1      config-akonadi.h.cmake  
 M  +2 -0      server/CMakeLists.txt  
 M  +1 -1      server/control/CMakeLists.txt  
 M  +4 -5      server/control/main.cpp  
 A             server/shared/akapplication.cpp   [License: LGPL (v2+)]
 A             server/shared/akapplication.h   [License: LGPL (v2+)]
 M  +4 -4      server/src/main.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=903051