- shut down when we lost the connection to the D-Bus session bus (which   likely means the session was closed, but as a non-gui application we   have no way of knowing that). - add some basic handling of command line args, at least 'akonadiserver   --help' does no longer accidentally start a partial Akonadi server. - add a --version command line option which will be useful for the   self-tests

BUG: 178916

svn path=/trunk/kdesupport/akonadi/; revision=903051